...
                                                                <subviews>
                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="exp-aZ-SeS">
                                                                        <rect key="frame" x="0.0" y="8" width="100" height="68"/>
                                                                        <subviews>
                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="enY-fu-FsM">
                                                                                <rect key="frame" x="8" y="0.0" width="84" height="68"/>
                                                                                <accessibility key="accessibilityConfiguration" identifier="ValueLabel"/>
                                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                                <nil key="textColor"/>
                                                                                <nil key="highlightedColor"/>
                                                                            </label>
                                                                        </subviews>
                                                                        <color key="backgroundColor" systemColor="systemPurpleColor"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="ColorView"/>
                                                                        <constraints>
                                                                            <constraint firstItem="enY-fu-FsM" firstAttribute="top" secondItem="exp-aZ-SeS" secondAttribute="top" id="KOy-Qy-hw7"/>
                                                                            <constraint firstAttribute="trailing" secondItem="enY-fu-FsM" secondAttribute="trailing" constant="8" id="Xfc-fl-uGx"/>
                                                                            <constraint firstItem="enY-fu-FsM" firstAttribute="leading" secondItem="exp-aZ-SeS" secondAttribute="leading" constant="8" id="ZEP-mV-dX0"/>
                                                                            <constraint firstAttribute="bottom" secondItem="enY-fu-FsM" secondAttribute="bottom" id="qBF-1H-1vS"/>
                                                                        </constraints>
...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="xvh-v8-fwc">
                                <rect key="frame" x="137" y="382.5" width="140" height="131.5"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GfH-EC-Ci0">
                                        <rect key="frame" x="20" y="0.0" width="100" height="100"/>
                                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="WinnerColorView">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="100" id="TgH-Ij-7AW"/>
                                            <constraint firstAttribute="width" constant="100" id="yrw-Ns-XyM"/>
                                        </constraints>
                                    </view>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Numbers Win!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XgV-fG-8oo">
                                        <rect key="frame" x="0.0" y="105" width="140" height="26.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="WinnerLabel"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                            </stackView>
...
                                                    <constraints>
                                                        <constraint firstAttribute="width" secondItem="yLZ-eZ-H5Y" secondAttribute="height" multiplier="1:1" id="vkS-PR-y0F"/>
                                                    </constraints>
                                                </view>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QPO-d6-1ax">
                                                    <rect key="frame" x="84" y="19.5" width="310" height="21"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="ResultLabel"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                            <constraints>
...
                            <constraint firstItem="PTS-nH-X3j" firstAttribute="trailing" secondItem="lyL-W2-5cV" secondAttribute="trailing" id="Rys-Nn-ogs"/>
                            <constraint firstItem="lyL-W2-5cV" firstAttribute="top" secondItem="PTS-nH-X3j" secondAttribute="top" id="duN-Lz-oOp"/>
                            <constraint firstItem="lyL-W2-5cV" firstAttribute="leading" secondItem="PTS-nH-X3j" secondAttribute="leading" id="hkW-G3-mpk"/>
                            <constraint firstItem="PTS-nH-X3j" firstAttribute="bottom" secondItem="lyL-W2-5cV" secondAttribute="bottom" id="zyI-2R-zkT"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Results" id="M9I-FK-gSo"/>
                    <connections>
                        <outlet property="tableView" destination="lyL-W2-5cV" id="oZI-bh-xT3"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="c1y-cB-9fb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
