...
        if let winning = BusinessLogicManager.shared.determineWinnerPlaces3(fromItems: selectionsArray).first {
            let label = UILabel(frame: CGRect(x: 0.0, y: 0.0, width: 30.0, height: 30.0))
            let isNumbersWinning = winning.hexColor == SquareType.numeric.rawValue
            label.textAlignment = .center
            label.backgroundColor = isNumbersWinning ? .clear : UIColor(hex: winning.hexColor)
            label.text = isNumbersWinning ? "2" : ""
            label.accessibilityIdentifier = "WinningLabel"
            label.accessibilityLabel = "\(winning.name) is winning"
            label.accessibilityValue = winning.name
            navigationItem.rightBarButtonItem = UIBarButtonItem(customView: label)
        }
    }
}
...
